package com.practice.chapter5.practice3;

public class Book {
    String name;
    int year;
    int price;

    public Book(String name, int year, int price) {
        this.name = name;
        this.year = year;
        this.price = price;
    }
}
